--- a/console/console-web/src/main/webapp/s/console/ps/sv/gv/index.html
+++ b/console/console-web/src/main/webapp/s/console/ps/sv/gv/index.html
@@ -1,92 +1,122 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta http-equiv="pragma" content="no-cache">
-<meta http-equiv="cache-control" content="no-cache">
-<meta http-equiv="expires" content="0">
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="cache-control" content="no-cache">
+    <meta http-equiv="expires" content="0">
 
-<link href="../../../../third/bootstrap/3.0.2/css/bootstrap.css" rel="stylesheet" type="text/css">
-<link href="../../../../third/datetimepicker/css/bootstrap-datetimepicker.css" rel="stylesheet" type="text/css">
+    <link href="../../../../third/bootstrap/3.0.2/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="../../../../third/datetimepicker/css/bootstrap-datetimepicker.css" rel="stylesheet" type="text/css">
 
-<script src="../../../../third/jquery/jquery-1.11.1.js" type="text/javascript" charset="UTF-8"></script>
-<script src="../../../../third/datetimepicker/js/bootstrap-datetimepicker.js" charset="UTF-8" type="text/javascript"></script>
-<script src="../../../../third/datetimepicker/js/locales/bootstrap-datetimepicker.zh-CN.js" charset="UTF-8" type="text/javascript"></script>
-<script src="../../../../third/bootstrap/3.0.2/js/bootstrap.js" type="text/javascript" charset="UTF-8"></script>
-<script src="../../../../third/angular/1.2.6/angular.js" type="text/javascript" charset="UTF-8"></script>
-<script src="../../../../third/angular/1.2.6/angular-resource_1.2.9.js" charset="UTF-8" type="text/javascript"></script>
+    <script src="../../../../third/jquery/jquery-1.11.1.js" type="text/javascript" charset="UTF-8"></script>
+    <script src="../../../../third/datetimepicker/js/bootstrap-datetimepicker.js" charset="UTF-8"
+            type="text/javascript"></script>
+    <script src="../../../../third/datetimepicker/js/locales/bootstrap-datetimepicker.zh-CN.js" charset="UTF-8"
+            type="text/javascript"></script>
+    <script src="../../../../third/bootstrap/3.0.2/js/bootstrap.js" type="text/javascript" charset="UTF-8"></script>
+    <script src="../../../../third/angular/1.2.6/angular.js" type="text/javascript" charset="UTF-8"></script>
+    <script src="../../../../third/angular/1.2.6/angular-resource_1.2.9.js" charset="UTF-8"
+            type="text/javascript"></script>
 
 
-
-<title>全局变量</title>
+    <title>全局变量</title>
 </head>
 <body>
 <!-- 导航区 -->
-    <!-- Static navbar -->
-    <nav class="navbar navbar-default navbar-static-top" role="navigation">
-      <div class="container">
+<!-- Static navbar -->
+<nav class="navbar navbar-default navbar-static-top" role="navigation">
+    <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Console</a>
+            <a class="navbar-brand" href="#">Console</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">平台服务<span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">全局变量</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Default</a></li>
-            <li class="active"><a href="./">Static top</a></li>
-            <li><a href="../navbar-fixed-top/">Fixed top</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">平台服务<span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">全局变量</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li class="dropdown-header">Nav header</li>
+                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Default</a></li>
+                <li class="active"><a href="./">Static top</a></li>
+                <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
+    </div>
+</nav>
 
+<!-- 页面主体 -->
 <div class="container">
-<!-- 查询区 -->
-<div class="row">
-  <div class="col-md-1">
-  <label class="control-label" for="categoryCtrl">类别</label>
-  </div>
-  <div class="col-md-2">
-    <select class="form-control" id="categoryCtrl">
-  <option>平台</option>
-  <option>系统</option>
-</select>
-  </div>
-  
-  
-  <div class="col-md-3">
-    <input type="text" class="form-control" placeholder=".col-xs-3">
-  </div>
-  <div class="col-md-4">
-    <input type="text" class="form-control" placeholder=".col-xs-4">
-  </div>
+    <h2>全局变量管理</h2>
+    <br/>
+    <form class="form-horizontal" role="form">
+        <!-- 查询区 -->
+        <!-- 查询条件 -->
+        <div class="row">
+            <label class="control-label col-md-1" for="categoryCtrl">类别</label>
+            <div class="col-md-2">
+                <select class="form-control" id="categoryCtrl">
+                    <option value="0"></option>
+                    <option value="1">平台</option>
+                    <option value="2">系统</option>
+                </select>
+            </div>
+
+            <label class="control-label col-md-1" for="codeCtrl">变量编码</label>
+            <div class="col-md-2">
+                <input type="text" id="codeCtrl" class="form-control" placeholder="变量编码">
+            </div>
+
+            <label class="control-label col-md-1" for="nameCtrl">变量名称</label>
+            <div class="col-md-2">
+                <input type="text" id="nameCtrl" class="form-control" placeholder="变量名称">
+            </div>
+        </div>
+
+        <!-- 查询按钮 -->
+        <div class="row">
+            <div class="col-md-offset-1">
+            <button type="button" class="btn btn-primary">查询</button>
+            <button type="button" class="btn btn-primary">新建</button>
+            </div>
+        </div>
+
+
+        <!-- 结果区 -->
+        <br/>
+        <div class="row">
+            <h3>查询结果</h3>
+        </div>
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                <th>ID</th>
+                <th>编码</th>
+                <th>名称</th>
+                <th>值</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+
+    </form>
 </div>
-
-<!-- 结果区 -->
-
-
-</div>
-
-
-
-
 
 
 </body>
