--- a/console/console-web/src/main/webapp/s/console/ps/sv/html/enum_index.html
+++ b/console/console-web/src/main/webapp/s/console/ps/sv/html/enum_index.html
@@ -52,7 +52,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#">Default</a></li>
-                <li class="active"><a href="./">Static top</a></li>
+                <li class="active"><a href="gv">Static top</a></li>
                 <li><a href="../navbar-fixed-top/">Fixed top</a></li>
             </ul>
         </div>
@@ -62,59 +62,68 @@
 
 <!-- 页面主体 -->
 <div class="container">
-    <h2>全局变量管理</h2>
-    <br/>
+    <div class="page-header">
+        <h2>全局变量管理</h2>
+    </div>
     <form class="form-horizontal" role="form">
         <!-- 查询区 -->
         <!-- 查询条件 -->
         <div class="row">
-            <label class="control-label col-md-1" for="categoryCtrl">类别</label>
-            <div class="col-md-2">
-                <select class="form-control" id="categoryCtrl">
-                    <option value="0"></option>
-                    <option value="1">平台</option>
-                    <option value="2">系统</option>
-                </select>
+            <div class="form-group">
+                <label class="col-lg-1 control-label" for="categoryCtrl">类别</label>
+
+                <div class="col-lg-2">
+                    <select class="form-control" id="categoryCtrl">
+                        <option value="0"></option>
+                        <option value="1">平台</option>
+                        <option value="2">系统</option>
+                    </select>
+                </div>
+
+                <label class="col-lg-1 control-label" for="codeCtrl">变量编码</label>
+
+                <div class="col-lg-2">
+                    <input type="text" id="codeCtrl" class="form-control" placeholder="变量编码">
+                </div>
+
+                <label class="control-label col-lg-1" for="nameCtrl">变量名称</label>
+
+                <div class="col-lg-2">
+                    <input type="text" id="nameCtrl" class="form-control" placeholder="变量名称">
+                </div>
             </div>
 
-            <label class="control-label col-md-1" for="codeCtrl">变量编码</label>
-            <div class="col-md-2">
-                <input type="text" id="codeCtrl" class="form-control" placeholder="变量编码">
-            </div>
-
-            <label class="control-label col-md-1" for="nameCtrl">变量名称</label>
-            <div class="col-md-2">
-                <input type="text" id="nameCtrl" class="form-control" placeholder="变量名称">
-            </div>
         </div>
 
         <!-- 查询按钮 -->
-        <div class="row">
-            <div class="col-md-offset-1">
+        <div>
             <button type="button" class="btn btn-primary">查询</button>
             <button type="button" class="btn btn-primary">新建</button>
-            </div>
         </div>
-
 
         <!-- 结果区 -->
         <br/>
-        <div class="row">
-            <h3>查询结果</h3>
-        </div>
         <table class="table table-striped table-hover">
             <thead>
-                <tr>
+            <tr>
+                <th>类别</th>
                 <th>ID</th>
                 <th>编码</th>
                 <th>名称</th>
                 <th>值</th>
-                </tr>
+                <th>创建时间</th>
+                <th>修改时间</th>
+            </tr>
             </thead>
             <tbody>
+                <tr ng-repeat="gv in gvList">
+                    <td>{{gv.id}}</td>
+                    <td>{{gv.code}}</td>
+                    <td>{{gv.name}}</td>
+                    <td>{{gv.value}}</td>
+                </tr>
             </tbody>
         </table>
-
     </form>
 </div>
 
